# kratos

./: README.md  demo.ipynb  kratos-presentation.md  pyproject.toml  scratch.ipynb
kratos/: Dockerfile  Dockerfile.base  Dockerfile.template  Sandboxfile  __init__.py  agents.py  bootstrap.py  bootstrap.sh  bootstrap_script.py  demo.ipynb  demo.py  execute.py  install.py  main.py  microvm.py  sandbox.py
spare_docs/: kratos-presentation.md
