[project]
name = "kratos"
version = "0.1.0"
description = "Kratos is a serverless intelligence platform for running ephemeral AI agents in isolated microVMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.1",
    "cloudpickle>=3.1.1",
    "duckduckgo-search>=8.1.1",
    "ollama>=0.5.1",
]
