[project]
name = "kratos"
version = "0.1.0"
description = "Kratos is a serverless intelligence platform for running ephemeral AI agents in isolated microVMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.7.1",
    "cloudpickle>=3.1.1",
    "ddgs>=9.0.0",
    "docker>=7.1.0",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openai>=1.95.0",
    "yfinance>=0.2.65",
    "youtube-transcript-api>=1.1.1",
]
